--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-4 mt-5">
                 <div class="card">
-                    <div class="card-header">Add new Member</div>
+                    <div class="card-header">Add new Attendee</div>
                     <div class="card-body">
                         <form th:action="@{/admin}" method="post" class="form-group">
 
@@ -25,10 +25,9 @@
 
             <div class="col-md-8 col-sm-8 mt-5">
                 <div class="card">
-                    <div class="card-header">Member List</div>
+                    <div class="card-header">Attendee List</div>
                     <div class="card-body">
                         <table class="table table-striped">
-
                             <thead>
                             <tr>
                                 <th>Email</th>
