--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -54,7 +54,7 @@
 
 <footer style="text-align:center;">
     <hr/>
-    <p>Copyright © 2018 <a href="https://www.fontbonne.edu/staff/zahid-anwar/">Zachary Hempen</a></p>
+    <p>Copyright © 2018 <a href="https://www.fontbonne.edu/staff/zahid-anwar/">Fontbonne Hackers' Club</a></p>
 </footer>
 
 </body>
