Made changes to Sign-up page and admin page

--- a/src/main/resources/templates/officers.html
+++ b/src/main/resources/templates/officers.html
@@ -6,7 +6,7 @@
         <h3>Officer Info</h3>
     </div>
         <!-- speakers -->
-        <div class="content">
+        <div class="content text-center">
             <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <img class="card-img-top" th:src="@{/angie.png}" alt="Card image cap" />
