--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html layout:decorator="layout/layout" lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.w3.org/1999/xhtml">
-<body class="pt-3 mb-2 bg-info text-white">
+<body class="pt-3 mb-2 bg-dark text-white">
 <th:block layout:fragment="content">
     <div class="container text-center"><h1 class="display-1 mt-4">Hackers' Club</h1>
         <p class="lead mb-4">
