--- a/src/main/resources/templates/program.html
+++ b/src/main/resources/templates/program.html
@@ -36,10 +36,10 @@
 
         <!-- speakers -->
         <h1 id="speakers" class="display-4 my-3 text-center text-muted">Adviser</h1>
-        <div class="row">
-            <div class="col-md-6 col-lg-4">
-                <div class="card">
-                    <div class="card-block">
+        <div class="row text-center">
+            <div class="col-md-6 col-lg-4 text-center">
+                <div class="content text-center">
+                    <div class="content text-center">
                         <h4 class="card-title text-center">Zahid Anwar</h4>
                         <p class="card-text">PhD from Illinois at Urbana/Champaign. Industry experience at IBM, Intel, Motorola, NCSA, CLS, CERN, xFlow, and Vertical Systems. Enjoys designing/hacking/analyzing networked software systems.</p>
                     </div>
@@ -50,7 +50,7 @@
 
 
         <!-- callout button -->
-        <button type="button" class="btn btn-outline-info btn-lg d-block mx-auto my-5">Don't miss out, sign-up now!</button>
+        <button type="button" class="btn btn-outline-info btn-lg d-block mx-auto my-5" href="#register">Don't miss out, sign-up now!</button>
 
         <!-- signup form -->
         <hr />
