Got the officers page in columns and centered Adviser info

--- a/src/main/resources/templates/officers.html
+++ b/src/main/resources/templates/officers.html
@@ -2,14 +2,13 @@
 <html layout:decorator="layout/layout" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 <body>
 <th:block layout:fragment="content">
-    <div class="container text-center">
-        <h3>Officer Info</h3>
-    </div>
+    <h1 class="display-4 text-center my-3 text-muted mt-5">Officer Info</h1>
+
         <!-- speakers -->
-        <div class="content text-center">
+        <div class="row">
             <div class="col-md-6 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/angie.png}" alt="Card image cap" />
+                    <img class="card-img-top" th:src="@{/Zahid_Anwar_pic.jpg}" alt="Card image cap" />
                     <div class="card-block">
                         <h4 class="card-title">Zahid Anwar</h4>
                         <p class="card-text">Adviser</p>
@@ -20,7 +19,7 @@
 
             <div class="col-md-6 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/ecma.png}" alt="Card image cap" />
+                    <img class="card-img-top" th:src="@{/clubpic.jpg}" alt="Card image cap" />
                     <div class="card-block">
                         <h4 class="card-title">Zachary Hempen</h4>
                         <p class="card-text">President</p>
@@ -31,7 +30,7 @@
 
             <div class="col-md-6 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/geo.png}" alt="Card image cap" />
+                    <img class="card-img-top" th:src="@{/clubpic.jpg}" alt="Card image cap" />
                     <div class="card-block">
                         <h4 class="card-title">Paul Morrison</h4>
                         <p class="card-text">Vice-President</p>
@@ -43,7 +42,7 @@
 
             <div class="col-md-6 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/jay.png}" alt="Card image cap" />
+                    <img class="card-img-top" th:src="@{/clubpic.jpg}" alt="Card image cap" />
                     <div class="card-block">
                         <h4 class="card-title">Mya Robinson</h4>
                         <p class="card-text">Secretary</p>
@@ -54,7 +53,7 @@
 
             <div class="col-md-6 col-lg-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/json.png}" alt="Card image cap" />
+                    <img class="card-img-top" th:src="@{/clubpic.jpg}" alt="Card image cap" />
                     <div class="card-block">
                         <h4 class="card-title">John McQuaide</h4>
                         <p class="card-text">Treasurer</p>
