--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html layout:decorator="layout/layout" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
-<body>
+<body class="mt-5">
     <th:block layout:fragment="content">
 
             <!-- Second Container -->
             <div class="container-fluid bg-2 text-center">
                 <h3 class="margin">First Meeting</h3>
                 <img th:src="@{/1stclubpic.jpg}" class="img-responsive img-circle margin" style="display:inline" alt="1stclubpic" width="500" height="350"  /><!--Ill put First club pic here-->
-                <p>For our first meeting we discussed web exploitations along with a hands on activity trying to exploit certain vulnerabilities on a local vulnerable website.</p>
+                <div class="card">
+                    <p class="card-text">For our first meeting we discussed web exploitations along with a hands on activity trying to exploit certain vulnerabilities on a local vulnerable website.</p>
+                </div>
             </div>
             <!-- Third Container -->
-            <div class="container-fluid bg-3 text-center">
+            <div class="container-fluid bg-3 text-center mt-5">
                 <h3 class="margin">Second Meeting</h3>
                 <img th:src="@{/2ndclubpic.jpg}" class="img-responsive img-circle margin" style="display:inline" alt="2ndclubpic" width="500" height="350" /><!--Ill put Second club pic here-->
-                <p>For our second meeting we did a hands on activity using Metasploit and Armitage to attack a vulnerable ISO called Metasploitable 2</p>
-                <p>Metasploitable 2 is an open-source ISO design to be vulnerable to hackers can practice their techniques.</p>
+                <div class="card">
+                     <p class="card-text">For our second meeting we did a hands on activity using Metasploit and Armitage to attack a vulnerable ISO called Metasploitable 2. Metasploitable 2 is an open-source ISO design to be vulnerable to hackers can practice their techniques.</p>
+                </div>
             </div>
 
     </th:block>
