--- a/src/main/resources/templates/program.html
+++ b/src/main/resources/templates/program.html
@@ -37,7 +37,7 @@
         <!-- speakers -->
         <h1 id="speakers" class="display-4 my-3 text-center text-muted">Adviser</h1>
         <div class="row text-center">
-            <div class="col-md-6 col-lg-4 text-center">
+            <div class=" content text-center">
                 <div class="content text-center">
                     <div class="content text-center">
                         <h4 class="card-title text-center">Zahid Anwar</h4>
